--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 ---
-{% assign dataVariable = site.mainData["en"] %}{%
+{% assign dataVariable = site.playbookData["en"] %}{%
  assign dataSourceEn = site.data[dataVariable] %}{%
- assign dataVariable = site.mainData["fr"] %}{%
+ assign dataVariable = site.playbookData["fr"] %}{%
  assign dataSourceFr = site.data[dataVariable] %}
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en"><![endif]--><!--[if gt IE 8]><!-->
 <html lang="en">
