--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 ---
 permalink: /404.html
 ---
-{% assign dataVariable = site.playbookData["en"] %}{% 
+{% assign dataVariable = site.mainData["en"] %}{% 
 assign dataSourceEn = site.data[dataVariable] %}{% 
-assign dataVariable = site.playbookData["fr"] %}{% 
+assign dataVariable = site.mainData["fr"] %}{% 
 assign dataSourceFr = site.data[dataVariable] %}
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
